k8s/app/09-gateway.yaml
# Simple Ingress instead of Gateway API (more compatible)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kyc-blockchain-ingress
  namespace: kyc-blockchain
  labels:
    app.kubernetes.io/name: kyc-blockchain
  annotations:
    # kubernetes.io/ingress.class: "traefik"
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
    # traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.entrypoints: web
    # traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
#   tls:
#   - hosts:
#     - kycapi.bunlong.uk
#     # secretName: kyc-blockchain-tls
#     secretName: kyc-blockchain-tls-staging
  rules:
  - host: kycapi.bunlong.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kyc-blockchain-service
            port:
              number: 80
